// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - WideButton render button if \`onClick\` is provided 1`] = `
.c0 {
  border: 0;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 4rem;
  min-height: 4rem;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  background-color: #f5ca1d;
  color: #ffffff;
  padding: 0 2rem;
  margin: 2rem 0;
  border: 0;
  border-bottom: 0.3rem solid #d18b13;
  border-radius: 0.6rem;
  font-size: 1.8rem;
  font-weight: 700;
  text-align: left;
  width: 100%;
  height: 4.7rem;
}

.c0 svg {
  display: block;
}

.c0:not(:disabled) {
  cursor: pointer;
}

.c1 {
  position: absolute;
  right: 1.3rem;
  bottom: 1.3rem;
}

<button
  className="c0"
  onClick={[MockFunction]}
>
  <span
    className="c1"
  >
    <svg
      height="17"
      viewBox="0 0 28 17"
      width="28"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.5.015l-2.121 2.121L22.243 7H0v3h22.243l-4.864 4.864 2.121 2.121L27.985 8.5z"
        fill="#fff"
      />
    </svg>
  </span>
</button>
`;

exports[`COMPONENT - WideButton renders Link if \`to\` prop is provided 1`] = `
.c0 {
  border: 0;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 4rem;
  min-height: 4rem;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  background-color: #f5ca1d;
  color: #ffffff;
  padding: 0 2rem;
  margin: 2rem 0;
  border: 0;
  border-bottom: 0.3rem solid #d18b13;
  border-radius: 0.6rem;
  font-size: 1.8rem;
  font-weight: 700;
  text-align: left;
  width: 100%;
  height: 4.7rem;
}

.c0 svg {
  display: block;
}

.c0:not(:disabled) {
  cursor: pointer;
}

.c1 {
  position: absolute;
  right: 1.3rem;
  bottom: 1.3rem;
}

<Link
  className="c0"
  colours={
    Object {
      "primaryColor": "#f2de6f",
      "secondaryColor": "#f5ca1d",
      "tertiaryColor": "#d18b13",
    }
  }
  to="/frontend"
>
  <span
    className="c1"
  >
    <svg
      height="17"
      viewBox="0 0 28 17"
      width="28"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.5.015l-2.121 2.121L22.243 7H0v3h22.243l-4.864 4.864 2.121 2.121L27.985 8.5z"
        fill="#fff"
      />
    </svg>
  </span>
</Link>
`;
